--- a/Project.toml
+++ b/Project.toml
@@ -24,3 +24,9 @@ PkgTemplates = "0.7"
 RegistryTools = "1.5"
 StringDistances = "0.8"
 julia = "1.4"
+
+[extra]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[target]
+test = ["Test"]
