--- a/Project.toml
+++ b/Project.toml
@@ -25,8 +25,8 @@ RegistryTools = "1.5"
 StringDistances = "0.8"
 julia = "1.4"
 
-[extra]
+[extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
-[target]
+[targets]
 test = ["Test"]
