--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,8 @@ Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 RegistryTools = "d1eb7eb1-105f-429d-abf5-b0f65cb9e2c4"
 StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
+TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
+UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
 Comonicon = "0.8, 0.9"
@@ -23,6 +25,7 @@ OrderedCollections = "1.3"
 PkgTemplates = "0.7"
 RegistryTools = "1.5"
 StringDistances = "0.8, 0.9"
+TOML = "1"
 julia = "1.4"
 
 [extras]
