--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
-Comonicon = "0.9"
+Comonicon = "0.9, 0.10"
 Configurations = "0.4"
 Crayons = "4.0"
 Downloads = "1"
