--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LibGit2 = "76f85450-5226-5b5a-8eaa-529ad045b433"
 LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
 LocalRegistry = "89398ba2-070a-4b16-a995-9893c55d93cf"
+MatchCore = "5dd3f0b1-72a9-48ad-ae6e-79f673da005f"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
