--- a/templates/basic.toml
+++ b/templates/basic.toml
@@ -1,29 +1,17 @@
-[project]
-version="0.1.0"
-# relative path is the path relative
-# to this template file
-src="package/src/module.jl"
+name = "basic"
 
-[project.test]
-file="package/test/runtests.jl"
-project=false
+[CompatHelper]
 
-[readme]
-file = "package/README.md"
-destination = "README.md"
-inline_badges = false
+[Git]
 
-[license]
-name = "MIT"
-# path= "<path to license file>"
-destination = "LICENSE"
+[License]
 
-[git]
-ignore = []
-# name = "<your name>"
-# email = "<your email>"
-# branch = "<default branch name>"
-ssh = false
-jl = true
-manifest = false
-gpgsign = false
+[ProjectFile]
+
+[Readme]
+
+[SrcDir]
+
+[TagBot]
+
+[Tests]
