--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,6 @@ InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LibGit2 = "76f85450-5226-5b5a-8eaa-529ad045b433"
 LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
-LocalRegistry = "89398ba2-070a-4b16-a995-9893c55d93cf"
 MatchCore = "5dd3f0b1-72a9-48ad-ae6e-79f673da005f"
 Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
@@ -32,8 +31,9 @@ Crayons = "4.0"
 Downloads = "1"
 GitHub = "5.1"
 JSON = "0.21"
-LocalRegistry = "0.3"
+LiveServer = "0.6"
 MatchCore = "0.1"
+Mustache = "1"
 OrderedCollections = "1.3"
 ProgressMeter = "1.4"
 StringDistances = "0.9"
